# zeroed-books-api

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  create-sqlx-migrations.sh  docker-compose.base.yml  docker-compose.standalone.yml  docker-compose.yml  init-dev-db.sql  sqlx-data.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.vscode.yml  fix-cargo-perms.sh  fix-dev-perms.sh
.github/workflows/: build.yml  database.yml  publish.yml  rust.yml  test.yml
charts/zeroed-books-api/: Chart.yaml  values.yaml
charts/zeroed-books-api/templates/: zeroed-books-api-deployment.yaml
helm-chart/: values.yaml
helm-chart/templates/: redis.yaml  zeroed-books-api-job-migrations.yaml  zeroed-books-api-service.yaml
migrations/: 20210805180740_create_user.up.sql  20210925195438_create_email_verification.down.sql  20220112022925_create_account.down.sql  20220114193530_create_transaction.up.sql  20220116140938_create_transaction_entry.down.sql  20220117203610_usd_currency.down.sql  20220203015345_create_password_reset.down.sql  20230331032139_legacy_user_id.down.sql  20230331032139_legacy_user_id.up.sql  20230331153108_drop-legacy-users.down.sql  20230331153108_drop-legacy-users.up.sql  20230331154328_drop-auth-tables.down.sql  20230331154328_drop-auth-tables.up.sql
migrations-sqlx/: 20220112022925_create_account.up.sql  20220114194313_create_currency.down.sql  20220114194313_create_currency.up.sql  20220116140938_create_transaction_entry.up.sql  20220117203610_usd_currency.up.sql
migrations/2021-08-05-180740_create_user/: up.sql
migrations/2021-08-07-184942_create_email/: down.sql  up.sql
migrations/2021-09-25-195438_create_email_verification/: up.sql
migrations/2022-01-12-022925_create_account/: up.sql
migrations/2022-01-14-193530_create_transaction/: up.sql
migrations/2022-01-16-140938_create_transaction_entry/: up.sql
migrations/2022-02-03-015345_create_password_reset/: up.sql
src/: client_ip.rs  cors.rs  database.rs  http_err.rs  lib.rs  main.rs  models.rs  schema.rs  server.rs
src/authentication/: http.rs  jwt.rs  mod.rs  models.rs
src/authentication/domain/: session.rs
src/cli/: migrate.rs  mod.rs
src/email/: clients.rs  mod.rs
src/identities/: mod.rs  services.rs
src/identities/commands/: mod.rs  postgres.rs
src/identities/domain/: email.rs  mod.rs  password_resets.rs  users.rs
src/identities/http/: mod.rs  reps.rs
src/identities/models/: email.rs  mod.rs  password_resets.rs
src/identities/queries/: mod.rs  postgres.rs
src/ledger/: mod.rs  models.rs  services.rs
src/ledger/commands/: mod.rs  postgres.rs
src/ledger/domain/: currency.rs  mod.rs  reports.rs  transactions.rs
src/ledger/domain/transactions/: new_transaction.rs  new_transaction_data.rs  new_transaction_entry_data.rs
src/ledger/http/: handlers.rs  mod.rs  reps.rs
src/ledger/http/reps/: currency.rs
src/ledger/queries/: mod.rs  postgres.rs
src/models/: ledger.rs  mod.rs
src/passwords/: hash.rs  length_validator.rs  mod.rs  password.rs
src/rate_limit/: mod.rs  redis.rs
src/repos/: email.rs  mod.rs  transactions.rs  users.rs
src/server/: mod.rs
templates/emails/: duplicate.txt  reset_password_no_account.txt  reset_password_token.txt  verify.txt
