[package]
name = "zeroed-books-api"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "zeroed-books-api"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.57"
axum = { version = "0.6.12", features = ["tokio"] }
axum-jwks = { version = "0.3.0" }
base64 = "0.13.0"
chrono = { version = "0.4.20", features = ["serde"] }
clap = { version = "4.0.19", features = ["derive", "env"] }
hyper = { version = "0.14.20" }
rand = "0.8.5"
rand_core = { version = "0.6", features = ["std"] }
reqwest = { version = "0.11.15", features = ["json"] }
sentry = { version = "0.28.0", default-features = false, features = [
    "anyhow",
    "backtrace",
    "contexts",
    "panic",
    "reqwest",
    "rustls",
    "tracing",
    "transport",
] }
sentry-tracing = { version = "0.30.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6.1", features = [
    "chrono",
    "offline",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
thiserror = { version = "1.0.37" }
tower = { version = "0.4.13" }
tracing = { version = "0.1.35" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tokio = { version = "1.21.2", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors"] }
uuid = { version = "1.2.1", features = ["serde", "v4"] }
