[package]
name = "zeroed-books-api"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "zeroed-books-api"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70" }
async-trait = { version = "0.1.68" }
axum = { version = "0.6.15", features = ["tokio"] }
axum-jwks = { version = "0.4.0" }
base64 = { version = "0.21.0" }
chrono = { version = "0.4.24", default-features = false, features = [
    "clock",
    "serde",
] }
clap = { version = "4.2.1", features = ["derive", "env"] }
reqwest = { version = "0.11.16", features = ["json"] }
sentry = { version = "0.31.5", default-features = false, features = [
    "anyhow",
    "backtrace",
    "contexts",
    "panic",
    "reqwest",
    "rustls",
    "tracing",
    "transport",
] }
sentry-tracing = { version = "0.30.0" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.96" }
sqlx = { version = "0.6.3", features = [
    "chrono",
    "offline",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
thiserror = { version = "1.0.40" }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tokio = { version = "1.27.0", features = ["full"] }
uuid = { version = "1.3.1", features = ["serde", "v4"] }
validator = { version = "0.16.0", features = ["derive"] }
